--- a/python_web_socket/python_web_socket_client.html
+++ b/python_web_socket/python_web_socket_client.html
@@ -20,7 +20,7 @@
          var sock = null;
          var ellog = null;
 
-         var globaldata = null;
+         window.globaldata = null;
 
          window.onload = function() {
 
@@ -52,7 +52,7 @@
                }
 
                sock.onmessage = function(e) {
-                  globaldata = e.data;
+                  window.globaldata = e.data;
 
                   // print to paper
                }
@@ -153,85 +153,195 @@ font-size: 30px;
 z-index: 6;">
    </div>
       <script type="text/paperscript"  canvas="canvas2"> 
+// A tribute to Nyan Cat http://www.youtube.com/watch?v=QH2-TGUlwu4
+var playing = false;
 
-var point = view.center;
+var mousePos = view.center + [view.bounds.width / 3, 100];
+var position = view.center;
 
-var colors = [];
-var cycles = 1;
-for (var i = 0, l = 10; i < l; i++) {
-   var brightness = 1 - (i / l) * 1.5;
-   var hue = i / l * cycles * 360;
-   var color = {
-      hue: hue,
-      saturation: 1,
-      brightness: brightness
-   };
-   colors.push(color);
+function onFrame(event) {
+   position += (mousePos - position) / 10;
+   var vector = (view.center - position) / 10;
+   moveStars(vector * 3);
+   event.global = globaldata;
+   moveRainbow(vector, event);
 }
 
-var radius = Math.max(view.size.width, view.size.height) * 0.75;
+function onMouseMove(event) {
+   mousePos = event.point;
+}
 
-var path = new Path.Rectangle({
-   rectangle: view.bounds,
-   fillColor: {
-      origin: point,
-      destination: point + [radius, 0],
-      gradient: {
-         stops: colors,
-         radial: true
+function onKeyDown(event) {
+   if (event.key == 'space')
+      project.activeLayer.selected = !project.activeLayer.selected;
+}
+
+var moveStars = new function() {
+   // The amount of symbol we want to place;
+   var count = 50;
+
+   // Create a symbol, which we will use to place instances of later:
+   var path = new Path.Circle({
+      center: [0, 0],
+      radius: 5,
+      fillColor: 'white',
+      strokeColor: 'black'
+   });
+
+   var symbol = new Symbol(path);
+
+   // Place the instances of the symbol:
+   for (var i = 0; i < count; i++) {
+      // The center position is a random point in the view:
+      var center = Point.random() * view.size;
+      var placed = symbol.place(center);
+      placed.scale(i / count + 0.01);
+      placed.data = {
+         vector: new Point({
+            angle: Math.random() * 360,
+            length : (i / count) * Math.random() / 5
+         })
+      };
+   }
+
+   var vector = new Point({
+      angle: 45,
+      length: 0
+   });
+
+   function keepInView(item) {
+      var position = item.position;
+      var viewBounds = view.bounds;
+      if (position.isInside(viewBounds))
+         return;
+      var itemBounds = item.bounds;
+      if (position.x > viewBounds.width + 5) {
+         position.x = -item.bounds.width;
+      }
+
+      if (position.x < -itemBounds.width - 5) {
+         position.x = viewBounds.width;
+      }
+
+      if (position.y > viewBounds.height + 5) {
+         position.y = -itemBounds.height;
+      }
+
+      if (position.y < -itemBounds.height - 5) {
+         position.y = viewBounds.height
       }
    }
-});
 
-var color = path.fillColor;
-var gradient = color.gradient;
-var mouseDown = false;
-var mousePoint = view.center;
-//
-var grow = false;
-var vector = new Point(150, 0);
+   return function(vector) {
+      // Run through the active layer's children list and change
+      // the position of the placed symbols:
+      var layer = project.activeLayer;
+      for (var i = 0; i < count; i++) {
+         var item = layer.children[i];
+         var size = item.bounds.size;
+         var length = vector.length / 10 * size.width / 10;
+         item.position += vector.normalize(length) + item.data.vector;
+         keepInView(item);
+      }
+   };
+};
 
-function onFrame() {
-   var ExcitementShortTerm;
-   if(globaldata) ExcitementShortTerm = eval(globaldata)[1].ExcitementShortTerm;
-   $("#asdf").html(ExcitementShortTerm);
+var moveRainbow = new function() {
+   var paths = [];
 
-   var ExcitementLongTerm = eval(globaldata)[2].ExcitementLongTerm;
-   // var EngagementBoredom = eval(globaldata)[3].EngagementBoredom;
-   // var FrustrationScore = eval(globaldata)[4].FrustrationScore;
-   // var LeftWink = eval(globaldata)[5].LeftWink;
-   // var Lowerface = eval(globaldata)[6].Lowerface;
-   //    var LowerfaceValue = eval(globaldata)[6].LowerfaceValue;
-   // var Upperface = eval(globaldata)[7].Upperfacee;
-  // console.log(ExcitementShortTerm);
-   // var UpperfaceValue = eval(globaldata)[7].UpperfaceValue;
-
-   //gradient.stops.splice(0,0,gradient.stops[0]);
-   console.log(ExcitementShortTerm*5);
-   //gradient.stops[0].hue = ExcitementShortTerm/100
-   //gradient.stops.pop();
-   for (var i = 0, l = gradient.stops.length; i < l; i++)
-      gradient.stops[i].color.hue = 250+ExcitementShortTerm;
-   if (grow && vector.length > 300) {
-      grow = false;
-   } else if (!grow && vector.length < 75) {
-      grow = false;
+   var colors = [];
+   for(var i=0;i<7;i++) {
+      colors[i] = "rgba(0,0,255,1)";
    }
-   
-      vector.length += (grow ? 1 : -1);
-      vector.angle += 5;
-   
-   color.highlight = mouseDown ? point : point + vector;
+   for (var i = 0; i < colors.length; i++) {
+      var path = new Path({
+         fillColor: colors[i]
+      });
+      paths.push(path);
+   }
+
+   var count = 30;
+   var group = new Group(paths);
+   var headGroup;
+   var eyePosition = new Point();
+   var eyeFollow = (Point.random() - 0.5);
+   var blinkTime = 200;
+   function createHead(vector, count) {
+               console.log(window.globaldata);
+            var val = 0;
+
+         if(typeof(globaldata) != "undefined" && globaldata != null) val = eval(globaldata)[1].ExcitementShortTerm;
+         $("#asdf").html(val);
+            var colors = [];
+         for(var i=0;i<7;i++) {
+          colors[i] = "rgba(0,0,"+Math.ceil(val*2.5)+",1)";
+            paths[i].fillColor = colors[i];
+          }
+          console.log(colors)
+      var eyeVector = (eyePosition - eyeFollow);
+      eyePosition -= eyeVector / 4;
+      if (eyeVector.length < 0.00001)
+         eyeFollow = (Point.random() - 0.5);
+      if (headGroup)
+         headGroup.remove();
+      var top = paths[0].lastSegment.point;
+      var bottom = paths[paths.length - 1].firstSegment.point;
+      var radius = (bottom - top).length / 2;
+      var circle = new Path.Circle({
+         center: top + (bottom - top) / 2,
+         radius: radius,
+         fillColor: 'black'
+      });
+      circle.scale(vector.length / 100, 1);
+      circle.rotate(vector.angle, circle.center);
+
+      innerCircle = circle.clone();
+      innerCircle.scale(0.5);
+      innerCircle.fillColor = (count % blinkTime < 3)
+         || (count % (blinkTime + 5) < 3) ? 'black' : 'white';
+      if (count % (blinkTime + 40) == 0)
+         blinkTime = Math.round(Math.random() * 40) + 200;
+      var eye = circle.clone();
+      eye.position += eyePosition * radius;
+      eye.scale(0.15, innerCircle.position);
+      eye.fillColor = 'black';
+      headGroup = new Group(circle, innerCircle, eye);
+   }
+
+   return function(vector, event) {
+
+
+      var vector = (view.center - position) / 10;
+
+      if (vector.length < 5)
+         vector.length = 5;
+      count += vector.length / 100;
+      group.translate(vector);
+      var rotated = vector.rotate(90);
+      var middle = paths.length / 2;
+      for (var j = 0; j < paths.length; j++) {
+         var path = paths[j];
+         var nyanSwing = playing ? Math.sin(event.count / 2) * vector.length : 1;
+         var unitLength = vector.length * (2 + Math.sin(event.count / 10)) / 2;
+         var length = (j - middle) * unitLength + nyanSwing;
+         var top = view.center + rotated.normalize(length);
+         var bottom = view.center + rotated.normalize(length + unitLength);
+         path.add(top);
+         path.insert(0, bottom);
+         if (path.segments.length > 200) {
+            var index = Math.round(path.segments.length / 2);
+            path.segments[index].remove();
+            path.segments[index - 1].remove();
+         }
+         path.smooth();
+      }
+      createHead(vector, event.count);
+   }
 }
 
-function onResize(event) {
-   point = view.center;
-   path.bounds = view.bounds;
-   var color = path.fillColor;
-   color.origin = point;
-   var radius = Math.max(view.size.width, view.size.height) * 0.75;
-   color.destination = point + [radius, 0];
-}
+
+
+
 
 </script>
 
